--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "functions": {
-      "api/index.py": { "runtime": "python3.11" }
-    },
+    "builds": [
+      { "src": "api/index.py", "use": "@vercel/python@3.2.0" }
+    ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
       { "src": "/(.*)", "dest": "/api/index.py" }
