--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "builds": [
-      { "src": "api/index.py", "use": "@vercel/python@3.2.0" }
+      { "src": "api/index.py", "use": "@vercel/python" }
     ],
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
