--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "builds": [
-      { "src": "api/index.py", "use": "@vercel/python" }
+        { "src": "api/index.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/(.*)", "dest": "/api/index.py" }
+        { "handle": "filesystem" },
+        { "src": "/(.*)", "dest": "/api/index.py" }
     ]
-  }
+}
   
